# sampleCpp-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: README.md
include/: Animal.h  Chicken.h  Cow.h  Dog.h
src/: Animal.cpp  Chicken.cpp  Cow.cpp  Dog.cpp  main.cpp
test/: chicken_test.cpp  cow_test.cpp  dog_test.cpp
